kubernetes/ntfy-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ntfy
  namespace: p2000-forwarder
  labels:
    app: ntfy
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: http
    protocol: TCP
    name: http
  selector:
    app: ntfy
